--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,26 @@
           <version>RELEASE</version>
           <scope>compile</scope>
       </dependency>
+      <!-- JPA dependencies -->
+      <dependency>
+          <groupId>javax.persistence</groupId>
+          <artifactId>javax.persistence-api</artifactId>
+          <version>2.2</version>
+      </dependency>
+
+      <!-- JPA with Hibernate -->
+      <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-core</artifactId>
+          <version>5.5.6.Final</version>
+      </dependency>
+
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>8.0.23</version> <!-- Use the latest version available -->
+      </dependency>
+
   </dependencies>
 
   <build>
