--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
           <version>0.12.3</version>
           <scope>runtime</scope>
       </dependency>
+      <dependency>
+          <groupId>javax</groupId>
+          <artifactId>javaee-api</artifactId>
+          <version>8.0</version>
+      </dependency>
 
   </dependencies>
 
