--- a/pom.xml
+++ b/pom.xml
@@ -33,15 +33,35 @@
       <artifactId>jersey-media-json-jackson</artifactId>
       <version>2.41</version>
     </dependency>
-<dependency>
-      <groupId>org.glassfish.jersey.inject</groupId>
-      <artifactId>jersey-cdi2-se</artifactId>
-      <version>2.41</version>
-    </dependency><dependency>
-      <groupId>org.jboss.weld.se</groupId>
-      <artifactId>weld-se-core</artifactId>
-      <version>3.1.9.Final</version>
-    </dependency>
+<!--<dependency>-->
+<!--      <groupId>org.glassfish.jersey.inject</groupId>-->
+<!--      <artifactId>jersey-cdi2-se</artifactId>-->
+<!--      <version>2.41</version>-->
+<!--    </dependency>-->
+<!--      <dependency>-->
+<!--      <groupId>org.jboss.weld.se</groupId>-->
+<!--      <artifactId>weld-se-core</artifactId>-->
+<!--      <version>3.1.9.Final</version>-->
+<!--    </dependency>-->
+<!--      <dependency>-->
+<!--      <groupId>org.glassfish.jersey.containers</groupId>-->
+<!--      <artifactId>jersey-container-servlet</artifactId>-->
+<!--      <version>2.41</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>org.glassfish.jersey.media</groupId>-->
+<!--      <artifactId>jersey-media-json-jackson</artifactId>-->
+<!--      <version>2.41</version>-->
+<!--    </dependency>-->
+<!--<dependency>-->
+<!--      <groupId>org.glassfish.jersey.inject</groupId>-->
+<!--      <artifactId>jersey-cdi2-se</artifactId>-->
+<!--      <version>2.41</version>-->
+<!--    </dependency><dependency>-->
+<!--      <groupId>org.jboss.weld.se</groupId>-->
+<!--      <artifactId>weld-se-core</artifactId>-->
+<!--      <version>3.1.9.Final</version>-->
+<!--    </dependency>-->
 <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -114,9 +134,20 @@
       <dependency>
           <groupId>javax.ws.rs</groupId>
           <artifactId>javax.ws.rs-api</artifactId>
-          <version>2.1</version>
+          <version>2.1.1</version>
+          <scope>provided</scope>
           <!-- Use the version you need -->
       </dependency>
+<!--      <dependency>-->
+<!--          <groupId>org.glassfish.jersey.core</groupId>-->
+<!--          <artifactId>jersey-server</artifactId>-->
+<!--          <version>3.0.4</version>-->
+<!--      </dependency>-->
+<!--      <dependency>-->
+<!--          <groupId>com.fasterxml.jackson.core</groupId>-->
+<!--          <artifactId>jackson-annotations</artifactId>-->
+<!--          <version>2.15.2</version>-->
+<!--      </dependency>-->
 
   </dependencies>
 
