--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,14 @@
       <artifactId>jersey-media-json-jackson</artifactId>
       <version>2.41</version>
     </dependency>
+
+
+<!--      push notificaiton-->
+      <dependency>
+          <groupId>com.google.firebase</groupId>
+          <artifactId>firebase-admin</artifactId>
+          <version>9.2.0</version>
+      </dependency>
 <!--<dependency>-->
 <!--      <groupId>org.glassfish.jersey.inject</groupId>-->
 <!--      <artifactId>jersey-cdi2-se</artifactId>-->
