--- a/pom.xml
+++ b/pom.xml
@@ -35,14 +35,32 @@
     </dependency>
 
 
-<!--      push notificaiton-->
+      <dependency>
+          <groupId>org.glassfish.jersey.media</groupId>
+          <artifactId>jersey-media-multipart</artifactId>
+          <version>2.35</version> <!-- Use the latest version available -->
+      </dependency>
+
+
+
+      <!--      push notificaiton-->
       <dependency>
           <groupId>com.google.firebase</groupId>
           <artifactId>firebase-admin</artifactId>
           <version>9.2.0</version>
 
       </dependency>
-<!--<dependency>-->
+
+
+
+
+      <dependency>
+          <groupId>com.cloudinary</groupId>
+          <artifactId>cloudinary-http44</artifactId>
+          <version>1.31.0</version>
+      </dependency>
+
+      <!--<dependency>-->
 <!--      <groupId>org.glassfish.jersey.inject</groupId>-->
 <!--      <artifactId>jersey-cdi2-se</artifactId>-->
 <!--      <version>2.41</version>-->
