--- a/pom.xml
+++ b/pom.xml
@@ -53,11 +53,17 @@
 
 
 
+      <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <version>2.13.0</version>
+      </dependency>
+
 
       <dependency>
           <groupId>com.cloudinary</groupId>
-          <artifactId>cloudinary-http45</artifactId>
-          <version>1.33.0</version>
+          <artifactId>cloudinary-http44</artifactId>
+          <version>1.31.0</version>
       </dependency>
 
       <!--<dependency>-->
